Fix expense filter input position on smaller devices

--- a/src/styles/components/_input-group.scss
+++ b/src/styles/components/_input-group.scss
@@ -16,3 +16,12 @@
     margin: 0 $s-size 0 0;
   }
 }
+
+.input-group__row {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: $desktop-breakpoint) {
+    flex-direction: row;
+  }
+}
