--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -4,6 +4,7 @@
   font-size: $font-size-small;
   font-weight: 300;
   padding: $xs-size;
+  width: 100%;
 }
 
 .select {
